@@ -1,6 +1,7 @@
 
 5.60  2014-11-11
   - Added to_array method to Mojo::Collection.
+  - Added xss_escape function to Mojo::Util.
   - Updated Net::DNS::Native requirement to 0.12 for some important bug fixes.
 
 5.59  2014-11-07
